OpenXR-MotionCompensation Changelog

Version 0.3.9.0

	General:
	- enabled locking and unlocking reference pose/cor position in VR playspace via keyboard shortcut
	- continue using last known reference tracker pose until connection timeout
	
	Vive Tracker
	- added dedicated config key for role (requires edit of config file on update)

	Virtual Tracker:
	- enabled COR calibration outside of neutral rig position
	- enabled use of right motion controller for COR manipulation
	- changed motion controller buttons for COR manipulation to avoid accidental trigger activation
	
	Graphical Overlay:
	- added optional crosshair to help with forward calibration
	- display current tracker pose while mc is off
	
	Bugfixes:
	- corrected translations in recordings to match local rig reference coordinate system

Version 0.3.8.0
	
	Overlay:
	- added chroma keyed passthrough mode for overlay (usable in e.g. Virtual Desktop)
	
	FlyPT Mover:
	- fixed direction of linear mc when motion rig is rotated (was global, now locally aligned with rig orientaion)
	
	Miscellaneous:
	- allow COR manipulation while mc is activated
	- added version info to DLLs (and switched to 4 numbers in versioning scheme)
	
	Bugfixes:
	- fixed timeout for tracker connection loss in default (non-legacy) mode
	- fixed handling of action sync for games supporting controller interaction (caused crash to desktop in MSFS and DCS with input stabilizer active)
	- improved mutlithreading stability

Version 0.3.7
	
	Yaw Game Engine:
	- removed ability to use offset values from GE (necessary interface will be removed in upcoming GE version)
	
	Miscellaneous:
	- renamed user guide to README
	- added version info to dlls
	- removed outdated package dependency (fmt)
	
	Bugfixes:
	- fixed third party overlay placement (e.g. OpenKneeboard in iRacing)
	- downgraded build platform because latest seems to introduce (so far inexplicable) startup crash on some systems
	- improved graphical overlay stability